tests/specs/future/import_assertions/error.out
error: Uncaught SyntaxError: Unexpected identifier 'assert'
import foo from "./main.json" assert { type: "json" };
                              ^
    at <anonymous> (file:///[WILDCARD]/main.js:[WILDCARD])
